--- a/css/style.css
+++ b/css/style.css
@@ -11,4 +11,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 1rem; 
+}
+
+.Explan:hover{
+    transform: scale(1.5);
+        transition: 1.5s;
 }
